--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,6 +25,7 @@ subjects:
 - !lcsh 'Microbiology'
 - !lcc 'QR'
 - !lcsh 'Thesis (Ph. D.)'
+- GITenberg
 title: "Experimentelle Untersuchungen über die Frage »Ist die Furcht vor Krankheitsübertragung\
   \ durch das Telephon berechtigt«?\r\nInaugural-Dissertation zur Erlangung der Doktorwürde\
   \ in der Medizin, Chirurgie und Geburtshülfe der Hohen Medizinischen Fakultät der\
